--- a/finances/src/main/webapp/stylesheets/main.css
+++ b/finances/src/main/webapp/stylesheets/main.css
@@ -1,4 +1,147 @@
 body {
-    font-family: Verdana, Helvetica, sans-serif;
-    background-color: #FFFFCC;
+    font-family: Verdana;
+    font-size: 62.5%;
+    background: #ffffff;
+    margin: 0;
+    /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
+    padding: 0;
+    color: #000000;
+}
+
+p {
+    font-size: 1.05em;
+}
+
+td, select, input {
+    font-family: Verdana;
+    font-size: 1.05em;
+}
+
+select {
+    padding: 2px;
+    border: solid 1px #CCC;
+    border-radius: 5px;
+    -moz-border-radius: 5px; /* FF */
+    -webkit-border-radius: 5px; /* Chrome */
+}
+
+.rootContainer {
+    width: 1010px;
+    height: 35px;
+    margin: 0 auto;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.contentBox {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
+.topMenuBox {
+    width: 1010px;
+    height: 35px;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: #ffffff;
+}
+
+.mainMenu {
+    width: 100%;
+    height: 25px;
+    font-size: 1.2em;
+    padding-top: 10px;
+    background-color: #333333;
+}
+
+.subMenu {
+    width: 100%;
+    height: 15px;
+    font-size: 1.05em;
+    background-color: #EFF0F0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-bottom: solid 1px #666666;
+}
+
+.innerMainMenu {
+    width: 1010px;
+    height: 30px;
+    margin: 0 auto;
+    color: #cccccc;
+}
+
+.menuItem {
+    display: inline;
+    font-weight: bold;
+    color: #ffffff;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.menuItem a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.menuItem:hover {
+    color: #000000;
+    background-color: #ffffff;
+    border-radius: 5px;
+    -moz-border-radius: 5px; /* FF */
+    -webkit-border-radius: 5px; /* Chrome */
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.selectedMenuItem {
+    background-color: #66CC99;
+    border-radius: 5px;
+    -moz-border-radius: 5px; /* FF */
+    -webkit-border-radius: 5px; /* Chrome */
+}
+
+.selectedMenuItem:hover {
+    color: #666666;
+    background-color: #ffffff;
+    cursor: pointer;
+}
+
+.subMenuItem {
+    height: 30px;
+    display: inline;
+    color: #000000;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+.subMenuItem:hover {
+    color: #000000;
+    background-color: #ffffff;
+    border-radius: 5px;
+    -moz-border-radius: 5px; /* FF */
+    -webkit-border-radius: 5px; /* Chrome */
+    cursor: pointer;
+}
+
+.selectedSubMenuItem {
+    color: #ffffff;
+    background-color: #66CC99;
+    border-radius: 5px;
+    -moz-border-radius: 5px; /* FF */
+    -webkit-border-radius: 5px; /* Chrome */
+}
+
+.selectedSubMenuItem:hover {
+    color: #666666;
+    background-color: #ffffff;
+    cursor: pointer;
 }
